# nautobot-catalog

./: .gitignore  generate_sidebar_html.py  generate_sidebar_json.py  pyproject.toml  sidebar.json  temp.py
nautobot_catalog/: __init__.py  models.py  navigation.py
nautobot_catalog/services/: catalog.py  navigation.py
